@@ -129,6 +129,7 @@ All (GUI):
 - Speeded up wxTreeCtrl by caching text size (botg).
 - Fix building with using system libpng 1.4 (Volker Grabsch).
 - Fixed generic wxDatePickerCtrl keyboard navigation.
+- Added EVT_WIZARD_PAGE_SHOWN event for wxWizard.
 
 wxMSW:
 
